--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bump Text Effect | Codrops</title>
+    <title>Bulge Text Effect | Codrops</title>
     <meta name="author" content="@romanjeanelie for Codrops" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/cgh4hnx.css" />
